@@ -185,7 +185,6 @@
 -V{t#,#}             Awaiting time 101: Process waiting at t/t_timing_class.v:274
 -V{t#,#}         Resuming delayed processes
 -V{t#,#}             Resuming: Process waiting at t/t_timing_class.v:173
--V{t#,#}+        Vt_timing_debug2_t__03a__03aDelay10::__VnoInFunc_do_sth_else
 -V{t#,#}+        Vt_timing_debug2_t__03a__03aDelay20::__VnoInFunc_do_delay
 -V{t#,#}             Resuming: Process waiting at t/t_timing_class.v:247
 -V{t#,#}             Process forked at t/t_timing_class.v:246 finished
@@ -499,7 +498,6 @@
 -V{t#,#}             Resuming: Process waiting at t/t_timing_class.v:257
 -V{t#,#}+        Vt_timing_debug2_t__03a__03aForkDelayClass::__VnoInFunc_do_delay
 -V{t#,#}             Resuming: Process waiting at t/t_timing_class.v:174
--V{t#,#}+        Vt_timing_debug2_t__03a__03aDelay20::__VnoInFunc_do_sth_else
 -V{t#,#}+        Vt_timing_debug2_t__03a__03aDelay40::__VnoInFunc_do_delay
 -V{t#,#}             Resuming: Process waiting at t/t_timing_class.v:131
 -V{t#,#}+        Vt_timing_debug2_t__03a__03aClkClass::__VnoInFunc_flip
@@ -1038,9 +1036,7 @@
 -V{t#,#}             Process forked at t/t_timing_class.v:250 finished
 -V{t#,#}             Resuming: Process waiting at t/t_timing_class.v:245
 -V{t#,#}             Resuming: Process waiting at t/t_timing_class.v:175
--V{t#,#}+        Vt_timing_debug2_t__03a__03aDelay40::__VnoInFunc_do_sth_else
 -V{t#,#}+        Vt_timing_debug2_t__03a__03aNoDelay::__VnoInFunc_do_delay
--V{t#,#}+        Vt_timing_debug2_t__03a__03aNoDelay::__VnoInFunc_do_sth_else
 -V{t#,#}+      Vt_timing_debug2_t___eval_initial__TOP__t__Vtiming__6____Vfork_1__0
 -V{t#,#}+        Vt_timing_debug2_t__03a__03aAssignDelayClass::__VnoInFunc_do_assign
 -V{t#,#}             Resuming: Process waiting at t/t_timing_class.v:76
@@ -1082,8 +1078,6 @@
 -V{t#,#}End-of-eval cleanup
 -V{t#,#}+++++TOP Evaluate Vt_timing_debug2::eval_step
 -V{t#,#}+    Vt_timing_debug2___024root___eval_debug_assertions
--V{t#,#}+        Vt_timing_debug2_t__03a__03aForkDelayClass::~
--V{t#,#}+        Vt_timing_debug2_t__03a__03aForkClass::~
 -V{t#,#}+ Eval
 -V{t#,#}+    Vt_timing_debug2___024root___eval
 -V{t#,#}+    Vt_timing_debug2___024root___eval_phase__act
@@ -1236,7 +1230,6 @@
 -V{t#,#}End-of-eval cleanup
 -V{t#,#}+++++TOP Evaluate Vt_timing_debug2::eval_step
 -V{t#,#}+    Vt_timing_debug2___024root___eval_debug_assertions
--V{t#,#}+        Vt_timing_debug2_t__03a__03aAssignDelayClass::~
 -V{t#,#}+ Eval
 -V{t#,#}+    Vt_timing_debug2___024root___eval
 -V{t#,#}+    Vt_timing_debug2___024root___eval_phase__act
@@ -1308,18 +1301,3 @@
 -V{t#,#}+    Vt_timing_debug2___024root___eval_phase__nba
 -V{t#,#}End-of-eval cleanup
 -V{t#,#}+    Vt_timing_debug2___024root___eval_final
--V{t#,#}+        Vt_timing_debug2_t__03a__03aDelay40::~
--V{t#,#}+        Vt_timing_debug2_t__03a__03aDelayClass::~
--V{t#,#}+        Vt_timing_debug2_t__03a__03aDelay20::~
--V{t#,#}+        Vt_timing_debug2_t__03a__03aDelayClass::~
--V{t#,#}+        Vt_timing_debug2_t__03a__03aDelay10::~
--V{t#,#}+        Vt_timing_debug2_t__03a__03aDelayClass::~
--V{t#,#}+        Vt_timing_debug2_t__03a__03aNoDelay::~
--V{t#,#}+        Vt_timing_debug2_t__03a__03aDelayClass::~
--V{t#,#}+        Vt_timing_debug2_t__03a__03aClkClass::~
--V{t#,#}+        Vt_timing_debug2_t__03a__03aLocalWaitClass::~
--V{t#,#}+          Vt_timing_debug2___024unit__03a__03aBaseClass::~
--V{t#,#}+        Vt_timing_debug2_t__03a__03aWaitClass::~
--V{t#,#}+          Vt_timing_debug2___024unit__03a__03aBaseClass::~
--V{t#,#}+        Vt_timing_debug2_t__03a__03aEventClass::~
--V{t#,#}+          Vt_timing_debug2___024unit__03a__03aBaseClass::~
